{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 132,
  "lineage": "8a158812-75d1-2cdb-f559-f0689aadac0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_demo_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:214387224583:internet-gateway/igw-0db7f79ce905c04b9",
            "id": "igw-0db7f79ce905c04b9",
            "owner_id": "214387224583",
            "tags": {
              "Name": "eks_demo_ig"
            },
            "vpc_id": "vpc-0600d7f41b88a0f0d"
          },
          "dependencies": [
            "aws_vpc.vpc_eks_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_demo_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017d0626699e75f5e",
            "owner_id": "214387224583",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db7f79ce905c04b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0600d7f41b88a0f0d"
          },
          "dependencies": [
            "aws_internet_gateway.eks_demo_ig",
            "aws_vpc.vpc_eks_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_demo_route_table_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea06c8fe86bf306f",
            "route_table_id": "rtb-017d0626699e75f5e",
            "subnet_id": "subnet-0bfcfcaa22928fc1d"
          },
          "dependencies": [
            "aws_internet_gateway.eks_demo_ig",
            "aws_route_table.eks_demo_route_table",
            "aws_subnet.eks_demo_sn",
            "aws_vpc.vpc_eks_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf9ddad80319d0ff",
            "route_table_id": "rtb-017d0626699e75f5e",
            "subnet_id": "subnet-06e4c68cbc46f2156"
          },
          "dependencies": [
            "aws_internet_gateway.eks_demo_ig",
            "aws_route_table.eks_demo_route_table",
            "aws_subnet.eks_demo_sn",
            "aws_vpc.vpc_eks_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg_eks_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:214387224583:security-group/sg-04c12989025150503",
            "description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c12989025150503",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks_cluster_sg_eks_demo",
            "name_prefix": "",
            "owner_id": "214387224583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks_cluster_sg_eks_demo",
              "kubernetes.io/cluster/eks-demo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0600d7f41b88a0f0d"
          },
          "dependencies": [
            "aws_vpc.vpc_eks_demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_demo_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:214387224583:subnet/subnet-0bfcfcaa22928fc1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0bfcfcaa22928fc1d",
            "map_public_ip_on_launch": true,
            "owner_id": "214387224583",
            "tags": {
              "Name": "eks-demo-sn",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "vpc_id": "vpc-0600d7f41b88a0f0d"
          },
          "dependencies": [
            "aws_vpc.vpc_eks_demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:214387224583:subnet/subnet-06e4c68cbc46f2156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06e4c68cbc46f2156",
            "map_public_ip_on_launch": true,
            "owner_id": "214387224583",
            "tags": {
              "Name": "eks-demo-sn",
              "kubernetes.io/cluster/eks-demo": "shared"
            },
            "vpc_id": "vpc-0600d7f41b88a0f0d"
          },
          "dependencies": [
            "aws_vpc.vpc_eks_demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_eks_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:214387224583:vpc/vpc-0600d7f41b88a0f0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b632a92fe13d783a",
            "default_route_table_id": "rtb-07d23d26bf779bd4a",
            "default_security_group_id": "sg-0bc37a0ec670aba57",
            "dhcp_options_id": "dopt-9355b1f8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0600d7f41b88a0f0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07d23d26bf779bd4a",
            "owner_id": "214387224583",
            "tags": {
              "Name": "eks-demo-node",
              "kubernetes.io/cluster/eks-demo": "shared"
            }
          }
        }
      ]
    }
  ]
}